added nickname and rating
